# OpenJK

./: CMakeLists.txt
code/: CMakeLists.txt
code/client/: cl_main.cpp
code/rd-common/: tr_public.h  tr_types.h
code/rd-vulkan/: CMakeLists.txt  compileShaders.cmake  tr_WorldEffects.cpp  tr_backend.cpp  tr_bsp.cpp  tr_cmds.cpp  tr_draw.cpp  tr_image.cpp  tr_init.cpp  tr_light.cpp  tr_local.h  tr_main.cpp  tr_quicksprite.cpp  tr_scene.cpp  tr_shade.cpp  tr_shader.cpp  tr_shadows.cpp  tr_sky.cpp  tr_surface.cpp  tr_world.cpp  vk.cpp  vk.h
code/rd-vulkan/shaders/: compile.sh  multi_texture.vert  multi_texture_add.frag  multi_texture_clipping_plane.vert  multi_texture_mul.frag  single_texture.frag  single_texture.vert  single_texture_clipping_plane.vert
code/rd-vulkan/shaders/spirv/: multi_texture_add_frag.cpp  multi_texture_clipping_plane_vert.cpp  multi_texture_mul_frag.cpp  multi_texture_vert.cpp  single_texture_clipping_plane_vert.cpp  single_texture_frag.cpp  single_texture_vert.cpp
codeJK2/game/: bg_pmove.cpp
codemp/: CMakeLists.txt
shared/sdl/: sdl_imp.cpp  sdl_window.cpp
shared/sys/: con_tty.cpp  sys_public.h
